Fix: gmaps overlay invisible on chrome

--- a/scss/perlovs/layout/_archive.scss
+++ b/scss/perlovs/layout/_archive.scss
@@ -82,6 +82,10 @@
 	height: 15em;
 
 	@include card;
+
+	img {
+		max-width:none;
+	}
 }
 
 // List pickers (sass placeholder)
